2012-10-23  Ingo Renner  <ingo.renner@dkd.de>

	* Added feature #37088: Define custom fields for indexing files through TypoScript
	* Removed language field from tx_solr_file documents

2012-08-24  Ingo Renner  <ingo.renner@dkd.de>

	* Added file garbage collection
	* Added Index Queue post-initialization

2012-08-21  Ingo Renner  <ingo.renner@dkd.de>

	* Added file and attachment detector interfaces
	* Added file indexer registration for page indexing
	* Added page file extractor and file data extraction query

2012-08-20  Ingo Renner  <ingo.renner@dkd.de>

	* Added initial extension scaffolding
	* Added existing file indexing code