@@ -1,3 +1,7 @@
+2012-11-22  Ingo Renner  <ingo.renner@dkd.de>
+
+	* Added TypoScript settings for file duplicate check
+
 2012-10-23  Ingo Renner  <ingo.renner@dkd.de>
 
 	* Added feature #37088: Define custom fields for indexing files through TypoScript
